// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Runner#start calls the taskManager for each tasks, and log the result 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "i": 1,
        "id": "task2",
      },
    ],
    Array [
      Object {
        "i": 4,
        "id": "task3",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": Promise {},
    },
    Object {
      "isThrow": false,
      "value": Promise {},
    },
  ],
}
`;

exports[`Runner#start calls the taskManager for each tasks, and log the result 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "task2",
      Object {
        "measures": Object {
          "i": 2,
          "result": "result-task2",
        },
        "task": Object {
          "i": 1,
          "id": "task2",
        },
      },
    ],
    Array [
      "task3",
      Object {
        "measures": Object {
          "i": 5,
          "result": "result-task3",
        },
        "task": Object {
          "i": 4,
          "id": "task3",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": Promise {},
    },
    Object {
      "isThrow": false,
      "value": Promise {},
    },
  ],
}
`;

exports[`Runner#start calls the taskManager for each tasks, and log the result 3`] = `
[MockFunction] {
  "calls": Array [
    Array [],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": Promise {},
    },
  ],
}
`;
